--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container-fluid">
           <div class="row">
-            <a class="navbar-brand" style="color:#000;font-weight:600;" href="#">Get Placed</a>
+            <a class="navbar-brand" style="color:#4534aa;font-weight:600;" href="#">Get Placed</a>
             <!-- <img class="navbar-brand" src="assets/banner.svg" style="width:100px;" alt=""> -->
           </div>
 
@@ -46,13 +46,13 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" style="color:white" href="#"><button type="button" class="btn btn-outline-primary navbar-btn">Home</button></a>
+                <a class="nav-link active" aria-current="page" style="color:white" href="#"><button type="button" class="btn btn-outline-primary navbar-btn">HOME</button></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color:white" href="topics/options/option.html"><button type="button" class="btn btn-outline-primary navbar-btn">Explore</button></a>
+                <a class="nav-link" style="color:white" href="#services"><button type="button" class="btn btn-outline-primary navbar-btn">EXPLORE</button></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary navbar-btn">Pricing</button></a>
+                <a class="nav-link" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary navbar-btn">PRICING</button></a>
               </li>
 
             </ul>
@@ -68,20 +68,20 @@
 
       <div class="row justify-content-between">
 
-        <div class=" col-lg-6 col-md-5 col-sm-10 mb-5">
-          <div class="row pt-5 ">
+        <div class=" col-lg-5 col-md-5 col-sm-10 mb-5 my-auto">
+          <div class="row pt-5 mt-5">
             <div class="col">
-              <h1>Complete and Simplified Guide for Placements</h1>
-              <p>Know all the resouces and somtheing</p>
-              <a href="topics/options/option.html"> <button type="button" class="btn btn-lg btn-outline-primary btn-explore">Explore</button></a>
+              <h1 style="color:#4534aa;">Complete Guide for Placements</h1>
+              <p class="text-justify">We provide all the guideance and resources you need for your placements to land your dream job in dream company.</p>
+              <a href="topics/options/option.html"> <button type="button" class="btn btn-lg btn-outline-primary btn-explore mt-3">Explore</button></a>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-6 col-md-7 col-sm-10  my-auto">
+        <div class="col-lg-5 col-md-7 col-sm-10  my-auto">
           <div class="row">
             <div class="col pl-5">
-              <img src="assets/job_interview.svg" alt="" style="width:100%;">
+              <img src="assets/interview_main.svg" alt="Interview Image" style="width:100%;">
             </div>
           </div>
         </div>
@@ -105,13 +105,11 @@
   <div class="container-fluid">
 
     <section id="goal">
-      <div class="row justify-content-around mt-5">
-        <div class="col-md-5 my-auto float">
-
-          <img src="assets/achieve.svg" alt="" style="width:100%;">
-
+      <div class="row justify-content-between">
+        <div class="col-md-6">
+          <img width="100%" src="assets/goal2.svg" alt="Our Goal Image">
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6">
           <div class="row pt-5 ">
             <div class="col">
               <span>
@@ -176,119 +174,194 @@
     </section>
 
     <section id="banner">
-      <div class="row justify-content-center">
+      <div class="row justify-content-between">
         <div class="col-md-8 my-auto">
-          <div class="row  offset-sm-0 mb-3">
+          <div class="row  mb-3">
             <div class="col">
-              <h2 class="sub-heading mb-3"><i class="bi bi-signpost boot-icon"></i>&nbsp The <mark>#rightway</mark> to prepare</h2>
+              <h2 class="sub-heading mb-3"><i class="bi bi-signpost boot-icon"></i>&nbsp The <mark>#rightway</mark> to prepare for placements</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+
           </div>
         </div>
-        <div class="col-md-4 col-sm-4 mx-auto  offset-sm-0 offset-lg-1">
-          <img src="assets/rightway.svg" style="width:100%;" alt="Right Way">
+        <div class="col-md-4 col-sm-4 mx-auto ">
+          <img src="assets/rightway.svg" alt="">
         </div>
       </div>
     </section>
-
-    <section id="testimonials">
-
-      <div class="row justify-content-center">
+    <section id="services">
+      <div class="row justify-content-center mb-5">
         <div class="col-sm-6 text-center">
-          <h2 class="sub-heading text-center mb-3"><i class="bi bi-chat-right-quote boot-icon"></i>&nbsp Testimonials</h2>
-          <p>What our user says...</P </div>
+          <h2 class="sub-heading text-center mb-3"><i class="bi bi-list-check boot-icon"></i></i>&nbsp Resources</h2>
+          <p>We provide number of awesome resources.</P </div>
         </div>
       </div>
-      <div class="w-100">
+      <div class="row justify-content-evenly">
 
-      </div>
+        <div class="col shadow rounded text-center service-card m-3 mycard ">
+          <img src="assets/new-resources-icon.svg" class="service-card-img mt-3 myimg">
+          <p class="service-card-heading">New Here</p>
 
-      <div id="testimonialsCara" class="carousel slide" data-bs-interval="100000">
-        <div class="carousel-inner p-3">
-
-          <div class="carousel-item active">
-
-            <div class="row justify-content-center">
-              <div class="col-sm-8 shadow" style="background:#fff">
-                <div class="position-absolute top-0 start-0 p-3">
-                  <i class="bi bi-chat-right-quote-fill boot-icon fa-3x" style="opacity:.3;"></i>
-                </div>
-
-                <div class="row m-5">
-                  <img class="person-pin mx-auto text-center" src="assets/person1.webp" alt="">
-                </div>
-                <div class="row px-5 pb-0 text-center">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos.</p>
-                </div>
-                <div class="row text-center sub-heading justify-content-center">
-                  <div class="col-sm-4 pt-3 mb-5">
-                    - Sachin Malik
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
-          <div class="carousel-item">
-            <div class="row justify-content-center">
-              <div class="col-sm-8 shadow" style="background:#fff">
-                <div class="position-absolute top-0 start-0 p-3">
-                  <i class="bi bi-chat-right-quote-fill boot-icon fa-3x" style="opacity:.3;"></i>
-                </div>
-
-                <div class="row m-5">
-                  <img class="person-pin mx-auto text-center" src="assets/person1.webp" alt="">
-                </div>
-                <div class="row px-5 pb-0 text-center">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos.</p>
-                </div>
-                <div class="row text-center sub-heading justify-content-center">
-                  <div class="col-sm-4 pt-3 mb-5">
-                    - Sachin Malik
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
-          <div class="carousel-item">
-            <div class="row justify-content-center">
-              <div class="col-sm-8 shadow" style="background:#fff">
-                <div class="position-absolute top-0 start-0 p-3">
-                  <i class="bi bi-chat-right-quote-fill boot-icon fa-3x" style="opacity:.3;"></i>
-                </div>
-
-                <div class="row m-5">
-                  <img class="person-pin mx-auto text-center" src="assets/person1.webp" alt="">
-                </div>
-                <div class="row px-5 pb-0 text-center">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos.</p>
-                </div>
-                <div class="row text-center sub-heading justify-content-center">
-                  <div class="col-sm-4 pt-3 mb-5">
-                    - Sachin Malik
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
+          <a class="nav-link mb-3" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary service-card-btn mybtn">Let's Go</button></a>
         </div>
-        <a class="carousel-control-prev boot-icon" href="#testimonialsCara" role="button" data-slide="prev">
-          <i class="bi bi-chevron-double-left fa-2x boot-icon" aria-hidden="true"></i>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#testimonialsCara" role="button" data-slide="next">
-          <i class="bi bi-chevron-double-right fa-2x boot-icon" aria-hidden="true"></i>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="col shadow rounded  text-center service-card m-3  mycard ">
+          <img src="assets/language-resources.svg" class="service-card-img mt-3 myimg">
+          <p class="service-card-heading">Languages</p>
+
+          <a class="nav-link mb-3" style="color:white" href="topics/languages/language.html"><button type="button" class="btn btn-outline-primary service-card-btn mybtn">Let's Go</button></a>
+        </div>
+        <div class="col shadow rounded  text-center service-card m-3  mycard ">
+          <div class="col">
+            <img src="assets/dsandalgo.svg" class="service-card-img mt-3" width="100%">
+          </div>
+
+
+          <p class="service-card-heading">DS & Algo</p>
+
+          <a class="nav-link mb-3" style="color:white" href="topics/dsalgo/dsalgo.html"><button type="button" class="btn btn-outline-primary service-card-btn mybtn">Let's Go</button></a>
+        </div>
+        <div class="col shadow rounded  text-center service-card m-3  mycard ">
+          <img src="assets/programming-resource-icon.svg" class="service-card-img mt-3 myimg">
+          <p class="service-card-heading">Programming</p>
+
+          <a class="nav-link mb-3" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary service-card-btn mybtn">Let's Go</button></a>
+        </div>
+      </div>
+      <br><br>
+      <br>
+      <div class="row justify-content-between">
+
+        <div class="col shadow rounded  text-center service-card m-3 mycard ">
+          <img src="assets/webdev-resources-icon.svg" class="service-card-img mt-3 myimg">
+          <p class="service-card-heading">Web Dev</p>
+
+          <a class="nav-link mb-3" style="color:white" href="topics/web-dev/webdev.html"><button type="button" class="btn btn-outline-primary service-card-btn mybtn">Let's Go</button></a>
+        </div>
+        <div class="col shadow rounded  text-center service-card  m-3 mycard ">
+          <img src="assets/system-design-resources-icon.svg" class="service-card-img mt-3 myimg">
+          <p class="service-card-heading">System Design</p>
+
+          <a class="nav-link mb-3" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary service-card-btn mybtn">Let's Go</button></a>
+        </div>
+        <div class="col shadow rounded  text-center service-card  m-3 mycard ">
+          <img src="assets/subjective-resources-icon.svg" class="service-card-img mt-3 myimg">
+          <p class="service-card-heading">Subjective</p>
+
+          <a class="nav-link mb-3" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary service-card-btn mybtn">Let's Go</button></a>
+        </div>
+        <div class="col shadow rounded  text-center service-card  m-3 mycard ">
+          <img src="assets/misc-resources-icon.svg" class="service-card-img mt-3 myimg">
+          <p class="service-card-heading">Misc.</p>
+
+          <a class="nav-link mb-3" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary service-card-btn mybtn">Let's Go</button></a>
+        </div>
+
       </div>
 
 
-    </section>
+  </div>
+
+  </div>
+
+  </section>
+  <section id="testimonials">
+
+    <div class="row justify-content-center">
+      <div class="col-sm-6 text-center">
+        <h2 class="sub-heading text-center mb-3"><i class="bi bi-chat-right-quote boot-icon"></i>&nbsp Testimonials</h2>
+        <p>What our user says...</P </div>
+      </div>
+    </div>
+    <div class="w-100">
+
+    </div>
+
+    <div id="testimonialsCara" class="carousel slide" data-bs-interval="100000">
+      <div class="carousel-inner p-3">
+
+        <div class="carousel-item active">
+
+          <div class="row justify-content-center">
+            <div class="col-sm-8 shadow" style="background:#fff">
+              <div class="position-absolute top-0 start-0 p-3">
+                <i class="bi bi-chat-right-quote-fill boot-icon fa-3x" style="opacity:.3;"></i>
+              </div>
+
+              <div class="row m-5">
+                <img class="person-pin mx-auto text-center" src="assets/person1.webp" alt="">
+              </div>
+              <div class="row px-5 pb-0 text-center">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos.</p>
+              </div>
+              <div class="row text-center sub-heading justify-content-center">
+                <div class="col-sm-4 pt-3 mb-5">
+                  - Sachin Malik
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="row justify-content-center">
+            <div class="col-sm-8 shadow" style="background:#fff">
+              <div class="position-absolute top-0 start-0 p-3">
+                <i class="bi bi-chat-right-quote-fill boot-icon fa-3x" style="opacity:.3;"></i>
+              </div>
+
+              <div class="row m-5">
+                <img class="person-pin mx-auto text-center" src="assets/person1.webp" alt="">
+              </div>
+              <div class="row px-5 pb-0 text-center">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos.</p>
+              </div>
+              <div class="row text-center sub-heading justify-content-center">
+                <div class="col-sm-4 pt-3 mb-5">
+                  - Sachin Malik
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <div class="row justify-content-center">
+            <div class="col-sm-8 shadow" style="background:#fff">
+              <div class="position-absolute top-0 start-0 p-3">
+                <i class="bi bi-chat-right-quote-fill boot-icon fa-3x" style="opacity:.3;"></i>
+              </div>
+
+              <div class="row m-5">
+                <img class="person-pin mx-auto text-center" src="assets/person1.webp" alt="">
+              </div>
+              <div class="row px-5 pb-0 text-center">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos.</p>
+              </div>
+              <div class="row text-center sub-heading justify-content-center">
+                <div class="col-sm-4 pt-3 mb-5">
+                  - Sachin Malik
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <a class="carousel-control-prev boot-icon" href="#testimonialsCara" role="button" data-slide="prev">
+        <i class="bi bi-chevron-double-left fa-2x boot-icon" aria-hidden="true"></i>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#testimonialsCara" role="button" data-slide="next">
+        <i class="bi bi-chevron-double-right fa-2x boot-icon" aria-hidden="true"></i>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+  </section>
   </div>
 
   <footer>
@@ -340,10 +413,10 @@
           </div>
           <div class="col-md-2">
             <div class="row ">
-              <a href="#"> <i class="bi fa-1x bi-facebook px-2 opacity-my" style="color:white;"></i></a>
-              <a href="#"><i class="bi fa-1x bi-twitter px-2" style="color:white;"></i></i></a>
-              <a href="#"> <i class="bi fa-1x bi-linkedin px-2" style="color:white;"></i></a>
-              <a href="#"> </i><i class="bi px-2 bi-instagram" style="color:white;"></i></i></a>
+              <a href="#"> <i class="bi fa-1x bi-facebook px-2 opacity-my" style="color:#FFBF00;"></i></a>
+              <a href="#"><i class="bi fa-1x bi-twitter px-2" style="color:#FFBF00;"></i></i></a>
+              <a href="#"> <i class="bi fa-1x bi-linkedin px-2" style="color:#FFBF00;"></i></a>
+              <a href="#"> </i><i class="bi px-2 bi-instagram" style="color:#FFBF00;"></i></i></a>
             </div>
           </div>
         </div>
@@ -356,6 +429,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+  <script src="Scripts/script.js" charset="utf-8"></script>
 </body>
 
 </html>
