--- a/topics/languages/language.html
+++ b/topics/languages/language.html
@@ -30,73 +30,82 @@
 
 <body>
   <header>
-    <section id="navbar-my">
 
-
-      <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-        <div class="container-fluid">
-          <div class="row">
-            <a class="navbar-brand" style="color:#000;font-weight:600;" href="#">Get Placed</a>
-            <!-- <img class="navbar-brand" src="assets/banner.svg" style="width:100px;" alt=""> -->
-          </div>
-
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" style="color:white" href="#"><button type="button" class="btn btn-outline-primary navbar-btn">HOME</button></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" style="color:white" href="#services"><button type="button" class="btn btn-outline-primary navbar-btn">EXPLORE</button></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary navbar-btn">PRICING</button></a>
-              </li>
-
-            </ul>
-          </div>
-        </div>
-      </nav>
-
-    </section>
   </header>
 
   <div class="container-fluid">
-    <section id="overview">
-
-      <div class="row justify-content-center">
-        <div class="col-sm-8 text-center">
-          <p style="margin:0px;">choose your weapo.. I mean</p>
-          <h1 class="heading">Language</h1>
-          <p>No issue , we all gotta start somewhere. But before diving into the main stuff you should know few key term and concept like What is programming , what is Syntax etc. You can find Links to all required resources</p>
-          <h3 class="heading">Estimated Time To Master</h3>
-          <div class="row time justify-content-center">
-            <div class="col-6">
-
-              <div class="row">
-                <div class="col  text-center">
-                  <p>Days</p>
-                  <p>2</p>
-                </div>
-                <div class="col text-center ">
-                  <p>Hours</p>
-                  <p class="border-left">2</p>
-                </div>
-                <div class="col  text-center">
-                  <p>Projects</p>
-                  <p class="border-left">16</p>
-                </div>
-              </div>
-
-
+    <div id="nav-overview">
+      <section id="navbar-my">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+          <div class="container-fluid">
+            <div class="row">
+              <a class="navbar-brand" style="color:#fff;font-weight:600;" href="#">Get Placed</a>
+              <!-- <img class="navbar-brand" src="assets/banner.svg" style="width:100px;" alt=""> -->
             </div>
 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" style="color:white" href="#"><button type="button" class="btn btn-outline-primary navbar-btn">HOME</button></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" style="color:white" href="#services"><button type="button" class="btn btn-outline-primary navbar-btn">EXPLORE</button></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary navbar-btn">PRICING</button></a>
+                </li>
+
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </section>
+      <section id="overview">
+
+        <div class="row justify-content-around">
+          <div class="col-sm-10 col-md-5 text-left my-auto">
+
+            <h1 class="heading pb-3">Language</h1>
+            <p class="text-justify">Choosing a Language can be a little overwhelming if you are new to this. Although You will be learning many different languages for diffrent developments.But for Learning Data Structure and Algorithm and
+              Competitive
+              Coding you should
+              pick one language and try to master it. Few of the most famous languages for this purpose are listed below. </p>
+            <h3 class="heading pt-3">Estimated Time To Master</h3>
+            <div class="row time justify-content-start">
+              <div class="col-sm-12 col-md-8">
+
+                <div class="row">
+                  <div class="col  text-center">
+                    <p>Days</p>
+                    <p>14</p>
+                  </div>
+                  <div class="col text-center ">
+                    <p>Hours</p>
+                    <p class="border-left">2</p>
+                  </div>
+                  <div class="col  text-center">
+                    <p>Projects</p>
+                    <p class="border-left">3</p>
+                  </div>
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+          <div class="col-sm-10 col-md-5 shadow  my-auto">
+            <div class="row rounded" style="background:#fff">
+              <img class="" src="assets/coding-animate.svg" alt="" style="width:100%;height:350px">
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
+
 
     <section id="cpp">
       <div class="row  p-3 justify-content-around pb-5">
@@ -109,13 +118,13 @@
 
 
               <div class="col">
-                <div class="row link-cpp">
-                  <div class="col-3">
+                <div class="row justify-content-start link-cpp">
+                  <div class="col-auto">
                     <i class="bi fa-2x bi-youtube"></i>
                   </div>
-                  <div class="col my-auto ">
-                    <a href="#">
-                      <p class="mt-3 my-auto float-left  "><strong> Playlist on Youtube</strong></p>
+                  <div class="col-auto my-auto ">
+                    <a href="https://www.youtube.com/watch?v=z9bZufPHFLU&list=PLfqMhTWNBTe0b2nM6JHVCnAkhQRGiZMSJ" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube">
+                      <p class="mt-3 my-auto float-left  "><strong>Playlist</strong></p>
                     </a>
                   </div>
                 </div>
@@ -125,7 +134,7 @@
                     <i class="bi fa-2x bi-link-45deg"></i>
                   </div>
                   <div class="col my-auto">
-                    <a href="#">
+                    <a href="https://www.1377x.to/torrent/3551398/Udemy-Beginning-C-Programming-From-Beginner-to-Beyond/" data-toggle="tooltip" data-placement="top" title="Torrent Link">
                       <p class="mt-3 my-auto float-left "><strong>Udemy Course</strong></p>
                     </a>
                   </div>
@@ -137,7 +146,7 @@
                     <i class="bi fa-2x  bi-file-earmark-code"></i>
                   </div>
                   <div class="col my-auto">
-                    <a href="#">
+                    <a href="https://www.cplusplus.com/" target="_blank" data-toggle="tooltip" data-placement="top" title="cplusplus.com" >
                       <p class="mt-3 my-auto float-left "><strong>Documentation</strong></p>
                     </a>
                   </div>
@@ -161,7 +170,7 @@
 
             </div>
             <a class="nav-link" style="color:white" href="assets/cheat_sheet_cpp.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary language-btn">Cheat Sheet</button></a>
-            <a class="nav-link" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary language-btn">OOPS Concept</button></a>
+            <a class="nav-link" style="color:white" href="assets/stl_cpp.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary language-btn">STL Containers</button></a>
           </div>
         </div>
       </div>
@@ -172,15 +181,16 @@
         <div class="col-lg-8  mt-5 order-2 order-md-1">
           <div class="row p-3">
             <h1 style="color:#FFD43B;">Python</h1>
-            <p class="b-text text-justify">C++ is a general-purpose programming language created by Bjarne Stroustrup as an extension of the C programming language, or "C with Classes"</p>
-            <p class="b-text text-justify">It will be awesome choice if you somewhat familiar to C Language. This brings OOPS concept like class , object , inheritence which make code very modular. C++ is very common among student learning Data
-              structure and competitive coding.
+            <p class="b-text text-justify">Python is an interpreted, high-level and general-purpose programming language. Python's design philosophy emphasizes code readability with its notable use of significant indentation.</p>
+            <p class="b-text text-justify">Python is a high-level programming language that has English-like syntax. This makes it easier to read and understand the code. Python is really easy to pick up and learn, that is why a lot of people recommend Python to beginners.
+              You need less lines of code to perform the same task as compared to other major languages like C/C++ and Java
+              
             </p>
             <h5>Quick Downloads</h5>
             <div class="w-100">
 
             </div>
-            <a class="nav-link" style="color:white" href="assets/cheat_sheet_cpp.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary language-btn-python">Cheat Sheet</button></a>
+            <a class="nav-link" style="color:white" href="assets/cheat_sheet_python.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary language-btn-python">Cheat Sheet</button></a>
             <a class="nav-link" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary language-btn-python">OOPS Concept</button></a>
           </div>
         </div>
@@ -198,8 +208,8 @@
                     <i class="bi fa-2x bi-youtube"></i>
                   </div>
                   <div class="col my-auto ">
-                    <a class="link-python" href="#">
-                      <p class="mt-3 my-auto float-left  "><strong> Playlist on Youtube</strong></p>
+                    <a class="link-python" href="https://www.youtube.com/watch?v=QXeEoD0pB3E&list=PLsyeobzWxl7poL9JTVyndKe62ieoN-MZ3" target="_blank" data-toggle="tooltip" data-placement="top" title="Playlist By Telusko">
+                      <p class="mt-3 my-auto float-left  "><strong> Youtube</strong></p>
                     </a>
                   </div>
                 </div>
@@ -209,7 +219,7 @@
                     <i class="bi fa-2x bi-link-45deg"></i>
                   </div>
                   <div class="col my-auto">
-                    <a class="link-python" href="#">
+                    <a class="link-python" href="https://www.1377x.to/torrent/3861964/Udemy-Learn-to-Code-with-Python-3/" target="_blank" data-toggle="tooltip" data-placement="top" title="Torrent Link">
                       <p class="mt-3 my-auto float-left "><strong>Udemy Course</strong></p>
                     </a>
                   </div>
@@ -220,7 +230,7 @@
                     <i class="bi fa-2x  bi-file-earmark-code"></i>
                   </div>
                   <div class="col my-auto">
-                    <a class="link-python" href="#">
+                    <a class="link-python" href="https://www.python.org/doc/" target="_blank" data-toggle="tooltip" data-placement="top" title="python.org">
                       <p class="mt-3 my-auto float-left "><strong>Documentation</strong></p>
                     </a>
                   </div>
@@ -250,7 +260,7 @@
                     <i class="bi fa-2x bi-youtube"></i>
                   </div>
                   <div class="col my-auto ">
-                    <a class="link-java" href="#">
+                    <a class="link-java" href="https://www.youtube.com/watch?v=ntLJmHOJ0ME&list=PLu0W_9lII9agS67Uits0UnJyrYiXhDS6q" target="_blank" data-toggle="tooltip" data-placement="top" title="Playlist by codewithharry">
                       <p class="mt-3 my-auto float-left  "><strong> Playlist on Youtube</strong></p>
                     </a>
                   </div>
@@ -261,7 +271,7 @@
                     <i class="bi fa-2x bi-link-45deg"></i>
                   </div>
                   <div class="col my-auto">
-                    <a class="link-java" href="#">
+                    <a class="link-java" href="https://www.1377x.to/torrent/4784998/Udemy-Java-2021-Complete-Java-Masterclass-Zero-to-Hero-Programming/" target="_blank" data-toggle="tooltip" data-placement="top" title="Torrent Link">
                       <p class="mt-3 my-auto float-left "><strong>Udemy Course</strong></p>
                     </a>
                   </div>
@@ -272,8 +282,8 @@
                     <i class="bi fa-2x  bi-file-earmark-code"></i>
                   </div>
                   <div class="col my-auto">
-                    <a class="link-java" href="#">
-                      <p class="mt-3 my-auto float-left "><strong>Documentation</strong></p>
+                    <a class="link-java" data-toggle="tooltip" data-placement="top" title="Not Found : /" >
+                      <p class="mt-3 my-auto float-left disabled "><strong>Documentation</strong></p>
                     </a>
                   </div>
 
@@ -287,16 +297,15 @@
         <div class="col-lg-8  mt-5">
           <div class="row p-3">
             <h1 style="color:#5382a1;">Java</h1>
-            <p class="b-text text-justify">C++ is a general-purpose programming language created by Bjarne Stroustrup as an extension of the C programming language, or "C with Classes"</p>
-            <p class="b-text text-justify">It will be awesome choice if you somewhat familiar to C Language. This brings OOPS concept like class , object , inheritence which make code very modular. C++ is very common among student learning Data
-              structure and competitive coding.
+            <p class="b-text text-justify">Although its initial release was nearly 30 years ago, Java is still one of the most in-demand and useful programming languages in modern technology.</p>
+            <p class="b-text text-justify">In 2020, Java is still “the” programming language for developers to master. Whether trying to get a job at a software development company or acting as a freelance developer.
             </p>
             <h5>Quick Downloads</h5>
             <div class="w-100">
 
             </div>
-            <a class="nav-link" style="color:white" href="assets/cheat_sheet_cpp.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary language-btn-java">Cheat Sheet</button></a>
-            <a class="nav-link" style="color:white" href="downloads/1.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary language-btn-java">OOPS Concept</button></a>
+            <a class="nav-link" style="color:white" href="assets/java_cheat_sheet.pdf" download target="_blank"><button type="button" class="btn btn-outline-primary language-btn-java">Overview and Oops</button></a>
+           
           </div>
         </div>
       </div>
@@ -376,7 +385,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="Scripts/script.js" charset="utf-8"></script>
+  <script src="script.js" charset="utf-8"></script>
 </body>
 
 </html>
